# e-retail

./: .codeclimate.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: Makefile  default.env  pyproject.toml
backend/app/: celery.py  settings.py  urls.py
backend/fixtures/: initial_data.json
backend/provider/: admin.py  constants.py  filters.py  serializers.py  services.py  tasks.py  urls.py
backend/provider/migrations/: 0001_initial.py  0002_product_provider_level_alter_provider_provider_and_more.py  0002_provider_level_alter_provider_provider_contact_and_more.py  0002_provider_level_contact_product.py  0002_provider_type_contact_product.py  0003_rename_providers_contact_provider.py  0004_rename_providers_product_provider.py  0005_remove_product_provider_alter_contact_table_and_more.py
backend/provider/models/: contact.py  contacts.py  product.py  provider.py  providers.py
backend/provider/serializers/: contact_serializers.py  product_serializers.py  provider_serializers.py
backend/provider/views/: product_views.py  provider_views.py
backend/providers/: models.py
backend/user/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py  0002_rename_providers_user_employer.py  0003_alter_user_table.py
backend/users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
tests/: conftest.py
tests/provider/: factories.py
tests/provider/tasks/: test_change_debt.py
tests/provider/views/: test_create_product.py  test_create_provider.py  test_list_provider.py  test_retrieve_update_destroy_product.py  (+1 more)
tests/user/: factories.py
(+2 files in other folders)
